--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   },
   "dependencies": {
     "gatsby": "^3.13.1",
+    "gatsby-plugin-typography": "^3.14.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-typography": "^0.16.20",
+    "typography": "^0.16.21"
   },
   "devDependencies": {
     "prettier": "2.4.1"
